--- a/masterHelper.css
+++ b/masterHelper.css
@@ -2514,7 +2514,6 @@ DISPLAYS
     min-height: 250px;
 }
 
-
 .min-height-1-i {
     min-height: 1px !important;
 }
@@ -2946,15 +2945,833 @@ DISPLAYS
     float: right !important;
 }
 
-/* OUTLINES */
-
 /* TOPS */
+
+.top-0 {
+    top: 0px;
+}
+
+.top-1 {
+    top: 1px;
+}
+
+.top-2 {
+    top: 2px;
+}
+
+.top-3 {
+    top: 3px;
+}
+
+.top-4 {
+    top: 4px;
+}
+
+.top-5 {
+    top: 5px;
+}
+
+.top-8 {
+    top: 8px;
+}
+
+.top-10 {
+    top: 10px;
+}
+
+.top-15 {
+    top: 15px;
+}
+
+.top-16 {
+    top: 16px;
+}
+
+.top-20 {
+    top: 20px;
+}
+
+.top-25 {
+    top: 25px;
+}
+
+.top-30 {
+    top: 30px;
+}
+
+.top-32 {
+    top: 32px;
+}
+
+.top-35 {
+    top: 35px;
+}
+
+.top-40 {
+    top: 40px;
+}
+
+.top-45 {
+    top: 45px;
+}
+
+.top-50 {
+    top: 50px;
+}
+
+.top-64 {
+    top: 64px;
+}
+
+.top-75 {
+    top: 75px;
+}
+
+.top-100 {
+    top: 100px;
+}
+
+.top-125 {
+    top: 125px;
+}
+
+.top-128 {
+    top: 128px;
+}
+
+.top-150 {
+    top: 150px;
+}
+
+.top-200 {
+    top: 200px;
+}
+
+.top-250 {
+    top: 250px;
+}
+
+
+.top-1-i {
+    top: 1px !important;
+}
+
+.top-2-i {
+    top: 2px !important;
+}
+
+.top-3-i {
+    top: 3px !important;
+}
+
+.top-4-i {
+    top: 4px !important;
+}
+
+.top-5-i {
+    top: 5px !important;
+}
+
+.top-8-i {
+    top: 8px !important;
+}
+
+.top-10-i {
+    top: 10px !important;
+}
+
+.top-15-i {
+    top: 15px !important;
+}
+
+.top-16-i {
+    top: 16px !important;
+}
+
+.top-20-i {
+    top: 20px !important;
+}
+
+.top-25-i {
+    top: 25px !important;
+}
+
+.top-30-i {
+    top: 30px !important;
+}
+
+.top-32-i {
+    top: 32px !important;
+}
+
+.top-35-i {
+    top: 35px !important;
+}
+
+.top-40-i {
+    top: 40px !important;
+}
+
+.top-45-i {
+    top: 45px !important;
+}
+
+.top-50-i {
+    top: 50px !important;
+}
+
+.top-64-i {
+    top: 64px !important;
+}
+
+.top-75-i {
+    top: 75px !important;
+}
+
+.top-100-i {
+    top: 100px !important;
+}
+
+.top-125-i {
+    top: 125px !important;
+}
+
+.top-128-i {
+    top: 128px !important;
+}
+
+.top-150-i {
+    top: 150px !important;
+}
+
+.top-200-i {
+    top: 200px !important;
+}
+
+.top-250-i {
+    top: 250px !important;
+}
 
 /* BOTTOMS */
 
+.bottom-0 {
+    bottom: 0px;
+}
+
+.bottom-1 {
+    bottom: 1px;
+}
+
+.bottom-2 {
+    bottom: 2px;
+}
+
+.bottom-3 {
+    bottom: 3px;
+}
+
+.bottom-4 {
+    bottom: 4px;
+}
+
+.bottom-5 {
+    bottom: 5px;
+}
+
+.bottom-8 {
+    bottom: 8px;
+}
+
+.bottom-10 {
+    bottom: 10px;
+}
+
+.bottom-15 {
+    bottom: 15px;
+}
+
+.bottom-16 {
+    bottom: 16px;
+}
+
+.bottom-20 {
+    bottom: 20px;
+}
+
+.bottom-25 {
+    bottom: 25px;
+}
+
+.bottom-30 {
+    bottom: 30px;
+}
+
+.bottom-32 {
+    bottom: 32px;
+}
+
+.bottom-35 {
+    bottom: 35px;
+}
+
+.bottom-40 {
+    bottom: 40px;
+}
+
+.bottom-45 {
+    bottom: 45px;
+}
+
+.bottom-50 {
+    bottom: 50px;
+}
+
+.bottom-64 {
+    bottom: 64px;
+}
+
+.bottom-75 {
+    bottom: 75px;
+}
+
+.bottom-100 {
+    bottom: 100px;
+}
+
+.bottom-125 {
+    bottom: 125px;
+}
+
+.bottom-128 {
+    bottom: 128px;
+}
+
+.bottom-150 {
+    bottom: 150px;
+}
+
+.bottom-200 {
+    bottom: 200px;
+}
+
+.bottom-250 {
+    bottom: 250px;
+}
+
+
+.bottom-1-i {
+    bottom: 1px !important;
+}
+
+.bottom-2-i {
+    bottom: 2px !important;
+}
+
+.bottom-3-i {
+    bottom: 3px !important;
+}
+
+.bottom-4-i {
+    bottom: 4px !important;
+}
+
+.bottom-5-i {
+    bottom: 5px !important;
+}
+
+.bottom-8-i {
+    bottom: 8px !important;
+}
+
+.bottom-10-i {
+    bottom: 10px !important;
+}
+
+.bottom-15-i {
+    bottom: 15px !important;
+}
+
+.bottom-16-i {
+    bottom: 16px !important;
+}
+
+.bottom-20-i {
+    bottom: 20px !important;
+}
+
+.bottom-25-i {
+    bottom: 25px !important;
+}
+
+.bottom-30-i {
+    bottom: 30px !important;
+}
+
+.bottom-32-i {
+    bottom: 32px !important;
+}
+
+.bottom-35-i {
+    bottom: 35px !important;
+}
+
+.bottom-40-i {
+    bottom: 40px !important;
+}
+
+.bottom-45-i {
+    bottom: 45px !important;
+}
+
+.bottom-50-i {
+    bottom: 50px !important;
+}
+
+.bottom-64-i {
+    bottom: 64px !important;
+}
+
+.bottom-75-i {
+    bottom: 75px !important;
+}
+
+.bottom-100-i {
+    bottom: 100px !important;
+}
+
+.bottom-125-i {
+    bottom: 125px !important;
+}
+
+.bottom-128-i {
+    bottom: 128px !important;
+}
+
+.bottom-150-i {
+    bottom: 150px !important;
+}
+
+.bottom-200-i {
+    bottom: 200px !important;
+}
+
+.bottom-250-i {
+    bottom: 250px !important;
+}
+
 /* LEFTS */
 
+.left-0 {
+    left: 0px;
+}
+
+.left-1 {
+    left: 1px;
+}
+
+.left-2 {
+    left: 2px;
+}
+
+.left-3 {
+    left: 3px;
+}
+
+.left-4 {
+    left: 4px;
+}
+
+.left-5 {
+    left: 5px;
+}
+
+.left-8 {
+    left: 8px;
+}
+
+.left-10 {
+    left: 10px;
+}
+
+.left-15 {
+    left: 15px;
+}
+
+.left-16 {
+    left: 16px;
+}
+
+.left-20 {
+    left: 20px;
+}
+
+.left-25 {
+    left: 25px;
+}
+
+.left-30 {
+    left: 30px;
+}
+
+.left-32 {
+    left: 32px;
+}
+
+.left-35 {
+    left: 35px;
+}
+
+.left-40 {
+    left: 40px;
+}
+
+.left-45 {
+    left: 45px;
+}
+
+.left-50 {
+    left: 50px;
+}
+
+.left-64 {
+    left: 64px;
+}
+
+.left-75 {
+    left: 75px;
+}
+
+.left-100 {
+    left: 100px;
+}
+
+.left-125 {
+    left: 125px;
+}
+
+.left-128 {
+    left: 128px;
+}
+
+.left-150 {
+    left: 150px;
+}
+
+.left-200 {
+    left: 200px;
+}
+
+.left-250 {
+    left: 250px;
+}
+
+
+.left-1-i {
+    left: 1px !important;
+}
+
+.left-2-i {
+    left: 2px !important;
+}
+
+.left-3-i {
+    left: 3px !important;
+}
+
+.left-4-i {
+    left: 4px !important;
+}
+
+.left-5-i {
+    left: 5px !important;
+}
+
+.left-8-i {
+    left: 8px !important;
+}
+
+.left-10-i {
+    left: 10px !important;
+}
+
+.left-15-i {
+    left: 15px !important;
+}
+
+.left-16-i {
+    left: 16px !important;
+}
+
+.left-20-i {
+    left: 20px !important;
+}
+
+.left-25-i {
+    left: 25px !important;
+}
+
+.left-30-i {
+    left: 30px !important;
+}
+
+.left-32-i {
+    left: 32px !important;
+}
+
+.left-35-i {
+    left: 35px !important;
+}
+
+.left-40-i {
+    left: 40px !important;
+}
+
+.left-45-i {
+    left: 45px !important;
+}
+
+.left-50-i {
+    left: 50px !important;
+}
+
+.left-64-i {
+    left: 64px !important;
+}
+
+.left-75-i {
+    left: 75px !important;
+}
+
+.left-100-i {
+    left: 100px !important;
+}
+
+.left-125-i {
+    left: 125px !important;
+}
+
+.left-128-i {
+    left: 128px !important;
+}
+
+.left-150-i {
+    left: 150px !important;
+}
+
+.left-200-i {
+    left: 200px !important;
+}
+
+.left-250-i {
+    left: 250px !important;
+}
+
 /* RIGHTS */
+
+.right-0 {
+    right: 0px;
+}
+
+.right-1 {
+    right: 1px;
+}
+
+.right-2 {
+    right: 2px;
+}
+
+.right-3 {
+    right: 3px;
+}
+
+.right-4 {
+    right: 4px;
+}
+
+.right-5 {
+    right: 5px;
+}
+
+.right-8 {
+    right: 8px;
+}
+
+.right-10 {
+    right: 10px;
+}
+
+.right-15 {
+    right: 15px;
+}
+
+.right-16 {
+    right: 16px;
+}
+
+.right-20 {
+    right: 20px;
+}
+
+.right-25 {
+    right: 25px;
+}
+
+.right-30 {
+    right: 30px;
+}
+
+.right-32 {
+    right: 32px;
+}
+
+.right-35 {
+    right: 35px;
+}
+
+.right-40 {
+    right: 40px;
+}
+
+.right-45 {
+    right: 45px;
+}
+
+.right-50 {
+    right: 50px;
+}
+
+.right-64 {
+    right: 64px;
+}
+
+.right-75 {
+    right: 75px;
+}
+
+.right-100 {
+    right: 100px;
+}
+
+.right-125 {
+    right: 125px;
+}
+
+.right-128 {
+    right: 128px;
+}
+
+.right-150 {
+    right: 150px;
+}
+
+.right-200 {
+    right: 200px;
+}
+
+.right-250 {
+    right: 250px;
+}
+
+
+.right-1-i {
+    right: 1px !important;
+}
+
+.right-2-i {
+    right: 2px !important;
+}
+
+.right-3-i {
+    right: 3px !important;
+}
+
+.right-4-i {
+    right: 4px !important;
+}
+
+.right-5-i {
+    right: 5px !important;
+}
+
+.right-8-i {
+    right: 8px !important;
+}
+
+.right-10-i {
+    right: 10px !important;
+}
+
+.right-15-i {
+    right: 15px !important;
+}
+
+.right-16-i {
+    right: 16px !important;
+}
+
+.right-20-i {
+    right: 20px !important;
+}
+
+.right-25-i {
+    right: 25px !important;
+}
+
+.right-30-i {
+    right: 30px !important;
+}
+
+.right-32-i {
+    right: 32px !important;
+}
+
+.right-35-i {
+    right: 35px !important;
+}
+
+.right-40-i {
+    right: 40px !important;
+}
+
+.right-45-i {
+    right: 45px !important;
+}
+
+.right-50-i {
+    right: 50px !important;
+}
+
+.right-64-i {
+    right: 64px !important;
+}
+
+.right-75-i {
+    right: 75px !important;
+}
+
+.right-100-i {
+    right: 100px !important;
+}
+
+.right-125-i {
+    right: 125px !important;
+}
+
+.right-128-i {
+    right: 128px !important;
+}
+
+.right-150-i {
+    right: 150px !important;
+}
+
+.right-200-i {
+    right: 200px !important;
+}
+
+.right-250-i {
+    right: 250px !important;
+}
 
 /* Z-INDEXES */
 
